force-app/main/default/objects/WBConnect_Configuration__mdt/WBConnect_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>WBConnect Configuration</label>
    <pluralLabel>WBConnect Configuration</pluralLabel>
</CustomObject>