force-app/main/default/objects/WBConnect_Configuration__mdt/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>