force-app/main/default/objects/WBConnect_Configuration__mdt/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <label>Application Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>