force-app/main/default/objects/WBConnect_Configuration__mdt/fields/Business_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Id__c</fullName>
    <label>Business Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>