force-app/main/default/objects/WBConnect_Configuration__mdt/fields/Phone_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Id__c</fullName>
    <label>Phone Number Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>